<resources>
    <string name="app_name">Trip Planner App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_to_visit">Restaurant to Visit</string>
    <string name="Update_Booking_Details">Update Booking Details</string>
    <string name="oDate">Order Date</string>
    <string name="updated_odate">Enter updated order date</string>
    <string name="rType">Room Type</string>
    <string name="updated_rtype">Enter updated room type</string>
    <string name="updated_quantity">Enter updated quantity of rooms</string>
    <string name="quantity">Quantity</string>
    <string name="add_booking_details">Add Booking Details</string>
    <string name="order_date">Enter order date</string>
    <string name="enter_roomtype">Enter Room Type</string>
    <string name="enter_quantity">Enter quantity of rooms</string>
    <string name="btn_update">Update</string>
    <string name="btn_add">Save</string>
    <string name="accom">Accommodation</string>
    <string name="Manage_Booking">Manage Booking</string>
    <string name="Search_Review">Search Review</string>
    <string name="Hotel_name">Hotel Name</string>
    <string name="enter_Hotel_name">Enter Hotel Name</string>
</resources>