<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


  <TextView
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:background="@color/purple_500"
      android:gravity="center"
      android:text="@string/add_booking_details"
      android:textColor="#FFF"
      android:textSize="25sp" />

  <TextView
      android:id="@+id/hoteltxt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="5dp"
      android:gravity="center"
      android:text="@string/Hotel_name"
      android:textColor="@color/black"
      android:textSize="20sp" />

  <EditText
      android:id="@+id/txtTName"
      android:layout_width="match_parent"
      android:layout_height="35dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:background="@drawable/rounded"
      android:gravity="center"
      android:importantForAutofill="no"
      android:inputType="text"
      android:textColor="#808080"
      tools:ignore="LabelFor" />

  <TextView
      android:id="@+id/orderDate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="5dp"
      android:gravity="center"
      android:text="@string/oDate"
      android:textColor="@color/black"
      android:textSize="20sp" />

  <EditText
      android:id="@+id/txtOrderDate"
      android:layout_width="match_parent"
      android:layout_height="35dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:background="@drawable/rounded"
      android:gravity="center"
      android:importantForAutofill="no"
      android:inputType="date"
      android:textColor="#808080"
      tools:ignore="LabelFor" />

  <TextView
      android:id="@+id/roomType"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="5dp"
      android:gravity="center"
      android:text="@string/rType"
      android:textColor="@color/black"
      android:textSize="20sp" />

  <EditText
      android:id="@+id/txtRoomType"
      android:layout_width="match_parent"
      android:layout_height="35dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:background="@drawable/rounded"
      android:gravity="center"
      android:importantForAutofill="no"
      android:inputType="text"
      android:textColor="#808080" />

  <TextView
      android:id="@+id/quantity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="5dp"
      android:gravity="center"
      android:text="@string/quantity"
      android:hint="@string/quantity"
      android:textColor="@color/black"
      android:textSize="20sp" />

  <EditText
      android:id="@+id/txtQuantity"
      android:layout_width="match_parent"
      android:layout_height="35dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:autofillHints="txtQuantity"
      android:background="@drawable/rounded"
      android:gravity="center"
      android:inputType="number"
      android:textColor="#808080" />

  <Button
      android:id="@+id/btnadd"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="130dp"
      android:layout_marginTop="20dp"
      android:layout_marginRight="130dp"
      android:background="@drawable/rounded"
      android:text="@string/btn_add"
      android:textAllCaps="false"
      android:textColor="@color/purple_500"
      android:textSize="21sp" />
</LinearLayout>